@@ -1,3 +1,9 @@
+2014-05-16  Aurelien Jarno  <aurelien@aurel32.net>
+
+	[BZ #16943]
+	* sysdeps/unix/sysv/linux/sparc/bits/resource.h: Declare prlimit
+	and prlimit64.
+
 2014-05-06  Aurelien Jarno  <aurelien@aurel32.net>
 
         [BZ# 16916]
